--- a/index.html
+++ b/index.html
@@ -2,326 +2,96 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>تأجير طاولات وكراسي – تأجير مستلزمات الحفلات والمناسبات</title>
-  <meta name="description" content="أفضل خدمات تأجير طاولات وكراسي وتأجير كنب ومكبرات صوت وخيام وسجاد ملكي وجلسات شعبية وقهوجيين وصبابين في الرياض. اتصل الآن 0559534118" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="تأجير كراسي وطاولات وخيام وقهوجيين وصبابين وتنظيم حفلات في الدمام والخبر والمنطقة الشرقية.">
+  <meta name="keywords" content="تأجير كراسي, تأجير طاولات, قهوجي بالدمام, صبابين وصبابات, تأجير خيام, جلسات شعبية, مكيفات للحفلات, تنظيم مناسبات, النيزك للحفلات, الشرقية, الدمام, الخبر">
+  <title>تأجير كراسي وطاولات وخيام وقهوجيين بالدمام والخبر</title>
   <style>
-    /* Fonts */
-    @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
-
-    /* Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Cairo', sans-serif;
-    }
-    body {
-      background: linear-gradient(135deg, #f8f7f3cc, #ffffffcc);
-      color: #222;
-      line-height: 1.6;
-      min-height: 100vh;
-    }
-    a {
-      color: #0451a5;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-    a:hover {
-      color: #023d7a;
-    }
-    header {
-      background: rgba(255 255 255 / 0.8);
-      padding: 15px 20px;
-      box-shadow: 0 0 10px rgb(0 0 0 / 0.05);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      border-bottom: 2px solid #f4c542;
-    }
-    header .logo {
-      font-weight: 900;
-      font-size: 1.5rem;
-      color: #f4c542;
-      text-shadow: 0 0 4px #f4c542aa;
-      user-select: none;
-    }
-    header nav a {
-      margin-left: 20px;
-      font-weight: 600;
-      font-size: 1rem;
-    }
-    main {
-      max-width: 1200px;
-      margin: 30px auto;
-      padding: 0 15px;
-    }
-    h1, h2, h3 {
-      color: #333;
-      margin-bottom: 10px;
-      font-weight: 700;
-      text-shadow: 0 0 3px #f4c542aa;
-    }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    section.service {
-      background: rgba(244, 197, 66, 0.1);
-      border-radius: 15px;
-      padding: 20px;
-      margin-bottom: 35px;
-      box-shadow: 0 0 10px #f4c542aa;
-      backdrop-filter: blur(10px);
-    }
-    section.service img {
-      max-width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #f4c542bb;
-      margin-bottom: 15px;
-    }
-    section.service .content {
-      margin-bottom: 15px;
-      font-size: 1.1rem;
-      color: #222;
-      line-height: 1.5;
-    }
-    .btn-contact {
-      background: #f4c542;
-      color: #222;
-      padding: 10px 20px;
-      border-radius: 30px;
-      font-weight: 700;
-      box-shadow: 0 0 10px #f4c542cc;
-      display: inline-block;
-      margin-right: 10px;
-      transition: background 0.3s ease;
-      cursor: pointer;
-      user-select: none;
-      border: none;
-    }
-    .btn-contact:hover {
-      background: #d9af29;
-    }
-    .contact-buttons {
-      margin-top: 10px;
-    }
-    /* Contact Icons */
-    .contact-icon {
-      vertical-align: middle;
-      margin-left: 8px;
-      width: 24px;
-      height: 24px;
-      filter: drop-shadow(0 0 1px #222);
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      color: #555;
-      padding: 15px 0;
-      border-top: 1px solid #eee;
-      margin-top: 40px;
-      user-select: none;
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 2rem;
-      }
-      section.service {
-        padding: 15px;
-      }
-      .btn-contact {
-        margin-bottom: 10px;
-        width: 100%;
-        text-align: center;
-      }
-      header nav a {
-        margin-left: 10px;
-        font-size: 0.9rem;
-      }
-    }
+    body { font-family: 'Arial', sans-serif; background-color: #f6f6f6; margin: 0; padding: 0; direction: rtl; }
+    .container { max-width: 1000px; margin: auto; padding: 20px; background: white; }
+    h1, h2 { color: #9c6b2d; }
+    p { line-height: 1.8; }
+    .section { margin-bottom: 40px; border-bottom: 1px solid #ddd; padding-bottom: 30px; }
+    .service-img { width: 100%; max-width: 700px; margin-top: 15px; border-radius: 6px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    .buttons { margin-top: 15px; }
+    .btn { display: inline-block; margin: 5px; padding: 10px 20px; background-color: #9c6b2d; color: white; text-decoration: none; border-radius: 5px; }
   </style>
-
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "حفلات ومناسبات",
-    "url": "https://www.aladyadh.com",
-    "logo": "https://www.aladyadh.com/favicon.ico"
-  }
-  </script>
 </head>
 <body>
+  <div class="container">
+    <h1>تأجير كراسي وطاولات وخيام وقهوجيين وصبابين في الدمام والمنطقة الشرقية</h1>
+    <p>نوفر جميع خدمات <strong>تأجير مستلزمات الحفلات والمناسبات</strong> بجودة عالية وأسعار مناسبة. سواء كنت تبحث عن <strong>تأجير كراسي وطاولات</strong>، أو <strong>قهوجيين وصبابين</strong> أو <strong>تأجير خيام مكيفة</strong>، أو حتى <strong>تنسيق جلسات شعبية</strong>، نحن في خدمتك في الدمام والخبر والشرقية. <strong>النيزك للحفلات</strong> اسم تثق به.</p>
 
-<header>
-  <div class="logo">حفلات ومناسبات</div>
-  <nav>
-    <a href="#karasy">تأجير كراسي</a>
-    <a href="#kanab">تأجير كنب</a>
-    <a href="#samaat">تأجير مكبرات صوت</a>
-    <a href="#sujjad">تأجير سجاد ملكي</a>
-    <a href="#khiyam">تأجير خيام</a>
-    <a href="#jalsat">تأجير جلسات</a>
-    <a href="#dhiyafah">قهوجيين وصبابين</a>
-  </nav>
-</header>
-
-<main>
-
-  <h1>تأجير طاولات وكراسي وتأجير كنب ومستلزمات الحفلات والمناسبات في الرياض</h1>
-
-  <!-- تأجير كراسي -->
-  <section id="karasy" class="service">
-    <h2>تأجير كراسي مميزة وفخمة لجميع المناسبات</h2>
-    <img src="https://i.postimg.cc/3JRnTVQb/IMG-2570.jpg" alt="كراسي شفافة" />
-    <img src="https://i.postimg.cc/vHfLbsSh/241cf55b-8ebb-415e-ae8c-6e8d3c51cde2.jpg" alt="كراسي ملكي" />
-    <p class="content">
-      نحن نوفر تأجير كراسي شفافة، كراسي عادية، كراسي ملكي، وكراسي ملكي ثلاثي بأعلى جودة وفخامة. تأجير كراسي للمناسبات والحفلات بأفضل الأسعار في الرياض.  
-      استمتع بخدمة تأجير كراسي تناسب حفلاتك بكل أذواقك، مع ضمان النظافة والراحة والأناقة.  
-      تأجير كراسي حفلات هو الخيار الأمثل لتنظيم جلسات راقية ومريحة.
-    </p>
-    <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="section">
+      <h2>تأجير كراسي وطاولات للمناسبات</h2>
+      <p>خدمة <strong>تأجير كراسي وطاولات</strong> متوفرة بكافة الأنواع: كراسي فندقية، كراسي شفافة، طاولات طعام، طاولات كوكتيل مضيئة، طاولات اجتماع، بجميع المقاسات والتنسيقات. نقدمها لجميع المناسبات من حفلات زفاف، تخرج، عشاء رسمي، مؤتمرات أو أعياد ميلاد. نوصلها ونرتبها لك في أي مكان بالشرقية.</p>
+      <img class="service-img" src="https://i.postimg.cc/PryQ5ZrZ/IMG-2316.jpg" alt="تأجير كراسي وطاولات">
+      <div class="buttons">
+        <a href="tel:0559534118" class="btn">📞 اتصال</a>
+        <a href="https://wa.me/966559534118" class="btn">💬 واتساب</a>
+      </div>
     </div>
-  </section>
-
-  <!-- تأجير كنب -->
-  <section id="kanab" class="service">
-    <h2>تأجير كنب ملكي ومخمل وثلاثي بأفخم التصاميم</h2>
-    <img src="https://i.postimg.cc/V09ykr8S/kanab1.jpg" alt="كنب ملكي" />
-    <img src="https://i.postimg.cc/n85bZynW/kanab2.jpg" alt="كنب ثلاثي" />
-    <img src="https://i.postimg.cc/Dg5SJ5fH/kanab3.jpg" alt="كنب مخمل" />
-    <p class="content">
-      نوفر لك تأجير كنب ملكي فاخر، كنب ثلاثي بتصاميم عصرية، وكنب مخمل ناعم لجلسات فخمة وراقية.  
-      تأجير كنب مناسب للحفلات، المناسبات، والاستراحات الخاصة في الرياض.  
-      جميع أنواع الكنب بأعلى جودة مع خدمات توصيل وتركيب سريعة.
-    </p>
-    <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="section">
+      <h2>تأجير خيام أوروبية ومكيفة</h2>
+      <p>نقدم أفضل خدمات <strong>تأجير خيام مكيفة</strong> و<strong>خيام أوروبية</strong> للمناسبات الفاخرة مثل الزفاف، المؤتمرات، المعارض، المناسبات الرمضانية. جميع الخيام مزودة بمكيفات عالية الجودة، أرضيات، إضاءة، وستائر فاخرة. تشمل الخدمة التركيب والنقل والتجهيز الكامل. <strong>النيزك للحفلات</strong> تقدم خيام VIP في الدمام، الخبر، الظهران، الجبيل، الأحساء.</p>
+      <img class="service-img" src="https://i.postimg.cc/QCtnqrmN/30c62dd9-e62e-40b9-9521-0b02920d9691.jpg" alt="تأجير خيام أوروبية ومكيفة">
+      <div class="buttons">
+        <a href="tel:0559534118" class="btn">📞 اتصال</a>
+        <a href="https://wa.me/966559534118" class="btn">💬 واتساب</a>
+      </div>
     </div>
-  </section>
 
-  <!-- تأجير مكبرات صوت -->
-  <section id="samaat" class="service">
-    <h2>تأجير مكبرات صوت وسماعات دي جي بأحدث التقنيات</h2>
-    <img src="https://i.postimg.cc/JtPKkJ7r/mokabarat1.jpg" alt="مكبر صوت" />
-    <img src="https://i.postimg.cc/dQMC2zVh/mokabarat2.jpg" alt="سماعات دي جي" />
-    <p class="content">
-      نقدم خدمة تأجير مكبرات صوت حديثة ومكبرات دي جي عالية الجودة بأفضل الأسعار.  
-      مناسبة لجميع الحفلات، الأعراس، المناسبات الكبيرة، والتجمعات.  
-      نوفر لك معدات صوت قوية مع خدمات تركيب وتشغيل احترافية.
-    </p>
-    <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="section">
+      <h2>قهوجيين وصبابين محترفين</h2>
+      <p>إذا كنت تبحث عن <strong>قهوجي بالدمام</strong> أو <strong>صبابين وصبابات</strong> لتقديم القهوة والشاي في مناسبتك، فنحن نوفر لك طاقم عمل مدرّب على أعلى مستوى، رجال ونساء، لجميع أنواع المناسبات. نقدم <strong>ضيافة متكاملة</strong> مع زي موحد، وسرعة في التقديم، واحترام للضيوف. كل هذا بإشراف مباشر من <strong>النيزك للحفلات</strong>.</p>
+      <img class="service-img" src="https://i.postimg.cc/vmk1m8V5/IMG-2373.jpg" alt="قهوجيين وصبابين وصبابات قهوة">
+      <div class="buttons">
+        <a href="tel:0559534118" class="btn">📞 اتصال</a>
+        <a href="https://wa.me/966559534118" class="btn">💬 واتساب</a>
+      </div>
     </div>
-  </section>
-
-  <!-- تأجير سجاد ملكي وممرات -->
-  <section id="sujjad" class="service">
-    <h2>تأجير سجاد ملكي وممرات راقية للمناسبات</h2>
-    <img src="https://i.postimg.cc/QBM36Jtb/sujjad1.jpg" alt="سجاد ملكي" />
-    <img src="https://i.postimg.cc/svzb64Hh/sujjad2.jpg" alt="ممرات فخمة" />
-    <p class="content">
-      نوفر تأجير سجاد ملكي فاخر وممرات أنيقة تناسب جميع المناسبات والحفلات.  
-      جودة عالية مع تصاميم فخمة تزيد من روعة مكان الحدث.  
-      تأجير سجاد للصالات، الخيام، والاستراحات مع توصيل وتركيب سريع.
-    </p>
-    <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="section">
+      <h2>تأجير جلسات شعبية (أرضية ومغربية)</h2>
+      <p>نوفر <strong>جلسات شعبية</strong> بجميع أنواعها مثل الجلسات المغربية المرتفعة أو الأرضية مع فرش فاخر وألوان متعددة. مثالية لحفلات الزواج، والعزايم الرمضانية، والمجالس الرجالية والنسائية. تشمل الخدمة الفرش والمساند والطاولات الوسطية والإضاءة حسب الطلب. <strong>النيزك للحفلات</strong> توفر لك جلسات تعكس الطابع التراثي الأصيل وتضيف فخامة للمناسبة.</p>
+      <img class="service-img" src="https://i.postimg.cc/v8f1Q6tz/IMG-2083.png" alt="جلسات شعبية أرضية ومغربية">
+      <div class="buttons">
+        <a href="tel:0559534118" class="btn">📞 اتصال</a>
+        <a href="https://wa.me/966559534118" class="btn">💬 واتساب</a>
+      </div>
     </div>
-  </section>
 
-  <!-- تأجير خيام -->
-  <section id="khiyam" class="service">
-    <h2>تأجير خيام أوروبية وخيام فخمة للمناسبات</h2>
-    <img src="https://i.postimg.cc/685LT8qS/41dd72b0-a345-482e-a5f6-fd272ca25556.jpg" alt="خيام أوروبية" />
-    <img src="https://i.postimg.cc/wt1XcnhQ/42a0c8ff-d003-4e5d-a9c5-bd2367ff927b.jpg" alt="خيام فخمة" />
-    <p class="content">
-      نوفر تأجير خيام أوروبية بتصاميم فخمة ومختلفة تناسب حفلات الزفاف والمناسبات الخاصة.  
-      خيام ذات جودة عالية مقاومة للعوامل الجوية، مع خدمات تركيب وسرعة توصيل.
-    </p>
-    <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="section">
+      <h2>تأجير ألعاب ترفيهية للحفلات</h2>
+      <p>خدمة <strong>تأجير ألعاب</strong> مثل طاولة تنس، فرفيرة، هوكي، زحاليق، نطيطات وغيرها لتسلية الأطفال والكبار خلال الفعاليات. تصلح للأعياد، المدارس، حفلات العائلة، المناسبات الرسمية. نوفر النقل والتركيب الكامل. ألعاب نظيفة وآمنة 100%.</p>
+      <img class="service-img" src="https://i.postimg.cc/zBCQfBcQ/IMG-2374.jpg" alt="ألعاب ترفيهية تأجير طاولات هوكي وتنس وفرفيرة">
+      <div class="buttons">
+        <a href="tel:0559534118" class="btn">📞 اتصال</a>
+        <a href="https://wa.me/966559534118" class="btn">💬 واتساب</a>
+      </div>
     </div>
-  </section>
-
-  <!-- تأجير جلسات شعبية -->
-  <section id="jalsat" class="service">
-    <h2>تأجير جلسات شعبية مغربية مرتفعة وأرضية</h2>
-    <img src="https://i.postimg.cc/BXfqBDG8/3e0fc10a-2c7e-4e14-b79c-e5c0c3d457fe.jpg" alt="جلسة مغربية مرتفعة" />
-    <img src="https://i.postimg.cc/67bWrm9w/40b40631-34fc-46c0-bdbd-95f67bf873a6.jpg" alt="جلسة مغربية أرضية" />
-    <p class="content">
-      نقدم تأجير جلسات شعبية مغربية فاخرة، مرتفعة وأرضية، مناسبة لجميع الحفلات والمناسبات الخاصة.  
-      جلسات مريحة وأنيقة تليق بجميع الأذواق مع خدمة التوصيل والتركيب.
-    </p>
-    <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="section">
+      <h2>تأجير مكيفات وسماعات وإضاءة للحفلات</h2>
+      <p>نوفر لك جميع حلول التبريد والصوت والإضاءة لمناسبتك، من <strong>تأجير مكيفات صحراوية</strong> قوية إلى <strong>سماعات دي جي ومكبرات صوت</strong> بأعلى نقاء، وحتى <strong>إضاءات احترافية</strong> تضيف جو فاخر لأي مناسبة. نقدم التركيب الكامل والتشغيل والدعم الفني خلال المناسبة. مثالية للحفلات في الهواء الطلق أو الخيام.</p>
+      <img class="service-img" src="https://i.postimg.cc/vBvtx6Lp/46d351d7-91d2-4d35-8424-f4342844f1c6.jpg" alt="تأجير مكيفات وسماعات">
+      <div class="buttons">
+        <a href="tel:0559534118" class="btn">📞 اتصال</a>
+        <a href="https://wa.me/966559534118" class="btn">💬 واتساب</a>
+      </div>
     </div>
-  </section>
 
-  <!-- قهوجيين وصبابين -->
-  <section id="dhiyafah" class="service">
-    <h2>خدمة قهوجيين وصبابين ضيافة مميزة</h2>
-    <img src="https://i.postimg.cc/zy08NcHW/IMG-2300.jpg" alt="قهوجي ضيافة" />
-    <img src="https://i.postimg.cc/75xwpkhw/IMG-2303.jpg" alt="صباب ضيافة" />
-    <p class="content">
-      نوفر فريق قهوجيين وصبابين محترف لتقديم خدمات الضيافة المميزة في جميع المناسبات.  
-      ضيافة تراثية وأصيلة تعزز من رقي حفلتك وتترك انطباعاً رائعاً لضيوفك.
-    </p>
-    <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="section">
+      <h2>تنظيم وتجهيز الحفلات والمناسبات بالكامل</h2>
+      <p>نقدم خدمات <strong>تنظيم مناسبات</strong> من البداية للنهاية: منسق حفلات، تزيين قاعات، بوفيهات، تجهيز المجالس، توفير كل مستلزمات المناسبة من صوتيات ودفايات وطاولات واجتماعات وكنب ملكي وشعبي، بإشراف كامل من <strong>النيزك للحفلات</strong>. وفر وقتك وجهدك معنا.</p>
+      <img class="service-img" src="https://i.postimg.cc/63RdJbQV/b3168f60-5a8a-49be-a705-45da4fcf5726.jpg" alt="تنظيم مناسبات تجهيز قاعات حفلات ومؤتمرات">
+      <div class="buttons">
+        <a href="tel:0559534118" class="btn">📞 اتصال</a>
+        <a href="https://wa.me/966559534118" class="btn">💬 واتساب</a>
+      </div>
     </div>
-  </section>
 
-</main>
-
-<footer>
-  جميع الحقوق محفوظة &copy; 2025 حفلات ومناسبات
-</footer>
-
+    <footer style="text-align: center; padding: 20px; margin-top: 50px; font-size: 14px; color: #777;">
+      جميع الحقوق محفوظة &copy; 2025 - موقع تأجير مستلزمات الحفلات بالدمام والخبر والمنطقة الشرقية.
+    </footer>
+  </div>
 </body>
 </html>
