--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 <header>
   <div class="logo">حفلات ومناسبات</div>
   <nav>
+    <a href="contact.html">تواصل معنا</a>
     <a href="about.html">من نحن</a>
     <a href="#karasy">تأجير كراسي</a>
     <a href="#kanab">تأجير كنب</a>
