--- a/index.html
+++ b/index.html
@@ -184,12 +184,24 @@
 تأجير كراسي شفافة
     </p>
     <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+     <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
+    <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
     </div>
   </section>
 
@@ -254,12 +266,24 @@
 خصم 30% علي تأجير زل وكراسي حفلات
     </p>
     <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
+     <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
     </div>
   </section>
   
@@ -289,12 +313,24 @@
 لأننا دائماً نهتم براحة العملاء فإننا نقوم بتيسير عملية التواصل معنا. لهذا يمكنك الحصول على اى خدمة من الخدمات التى نعمل على تقديمها بمنتهى السهولة واليسر. لأن شركة النيزك افضل شركة تعمل على تنسيق وتنظيم الحفلات وتقوم بتوفير كل مايحتاجه العرائس فى حفلة الزفاف. لهذا لا عليك سوى القيام بالاتصال على أرقامنا وطلب الخدمات التى تحتاج اليها وسنعمل على مساعدتك فى اسرع وقت وبأقل الاسعار.لأن شركتنا هى الافضل والارخص على مستوى المملكة.
     </p>
     <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
+   <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
     </div>
   </section>
 
@@ -350,12 +386,24 @@
 تاجير سماعات بلوتوث للحفلات
     </p>
     <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
+    <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
     </div>
   </section>
 
@@ -437,12 +485,24 @@
 خيام مناسبات للايجار
     </p>
     <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+   <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
+    <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
     </div>
   </section>
 
@@ -475,12 +535,24 @@
 تأجير جلسات ارضيه
     </p>
     <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+     <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
+    <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
     </div>
   </section>
 
@@ -508,12 +580,24 @@
 ضيافه
     </p>
     <div class="contact-buttons">
-      <button class="btn-contact" onclick="window.location.href='tel:0559534118'">اتصال مباشر
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" />
-      </button>
-      <button class="btn-contact" onclick="window.location.href='https://wa.me/966559534118'">واتساب
-        <img class="contact-icon" src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-      </button>
+    <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
+     <div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
     </div>
   </section>
 
