--- a/index.html
+++ b/index.html
@@ -157,7 +157,17 @@
 
 <main>
 
-  <h1>تأجير طاولات وكراسي ومستلزمات الحفلات والمناسبات في الشرقية</h1>
+<h1>تأجير طاولات وكراسي وتأجير كنب ومستلزمات الحفلات والمناسبات في الرياض</h1>
+
+<div class="contact-buttons" style="text-align: center; margin: 15px 0;">
+  <a href="https://wa.me/966559534118" target="_blank" style="margin: 0 10px;">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" width="40" />
+  </a>
+
+  <a href="tel:0559534118" style="margin: 0 10px;">
+    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="اتصال" width="40" />
+  </a>
+</div>
 
   <!-- تأجير كراسي -->
   <section id="karasy" class="service">
